# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.cargo/: config.toml
.sqlx/: query-6225830f6a0d5e483c1acf2684eea4529eabfbb151dc893c0503be0929428b15.json
configuration/: base.yaml
migrations/: 20241031152557_create_users_table.sql  20241031154550_rename_password_column.sql  20241102095721_add_salt_to_users.sql  20241102101330_remove_salt_from_users.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
